--- a/discussion_grid_starter/css/style.css
+++ b/discussion_grid_starter/css/style.css
@@ -40,26 +40,34 @@ footer{
   }
 
   .container{
+    grid-template-columns: 1fr 1fr;
+    grid-template-row: 350px 350px 350px 350px 350px 350px 100px;
       }
 
   .img-three{
+    grid-column: 1 / span 2;
+    
     
   }
 
   .img-six{
-    
+    grid-column: 1 / span 2;
   }
 
   .img-seven{
+    grid-column: 1 / span 2;
+    grid-row: 6 / auto;
     
   }
 
   .img-eight{
-    
+    grid-column: 2 / auto;
+    grid-row: 5 / auto;
   }
 
   .img-nine{
-    
+   grid-column: 1 / auto;
+   grid-row: 5 / auto;
   }
 }
 
@@ -71,5 +79,33 @@ footer{
     text-transform: lowercase;
     color: #00F;
   }
-
+  
+  .containter{
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 350px 350px 350px 350px 350px 100px;
+  }
+  
+  .img-one{
+    grid-column: 3 / -1;
+    }
+  .img-two{
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
+  }
+  .img-three{
+    grid-column: 3 / -1;
+  }
+  .img-four{
+    grid-column: 2 / auto;
+    grid-row: 3 / auto;
+  }
+  .img-five{
+    grid-column: 1 / auto;
+    grid-row: 3 / auto;
+  }
+  .img-six{
+    grid-column: 3 / auto;
+    grid-row: 3 / auto;
+  }
+      
 }
